@@ -1,1 +1,1 @@
-24aca17bc251416a05bedb9ec00172dd *addons.xml
+1b75f0c667cf7459e45c1a67e1f0b010 *addons.xml
